# LyceumMessenger

./: .env.example  .gitattributes  .gitignore  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
artifacts/api-py/: Dockerfile  auth.py  database.py  main.py  models.py  requirements.txt  run.py  schemas.py
artifacts/api-py/routes/: admin.py  auth.py  chats.py  messages.py  storage.py  users.py  ws.py
artifacts/messenger/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
artifacts/messenger/src/: App.tsx  index.css
artifacts/messenger/src/components/: AppShell.tsx  ChatList.tsx  ChatView.tsx  Lightbox.tsx  NewChatDialog.tsx  UserAvatar.tsx
artifacts/messenger/src/lib/: api-client.ts  auth-context.tsx  e2ee-context.tsx  e2ee.ts  format.ts  online-status.tsx  use-auth.ts  use-unread-notifier.ts  use-upload.ts
artifacts/messenger/src/pages/: Admin.tsx  Login.tsx  Messenger.tsx  Profile.tsx  not-found.tsx
